# borg-tool

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  borg-tool.example.toml  config.example.toml  deny.toml  justfile
.github/workflows/: ci.yml  codeql.yml  release.yml
src/: borg.rs  cli.rs  config.rs  main.rs  ui.rs
tests/: e2e.rs
