[package]
name = "borg-tool-rs"
version = "0.1.2"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
rpassword = "7.4"
dialoguer = "0.12"
indicatif = "0.18"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
serde_json = "1.0"
tempfile = "3.10"

[patch.crates-io]
# Avoid accidental yanked transitive pulls; can be extended if needed.
